--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,7 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.33.1
+MYAPP_UPLOAD_STORE_FILE=tp-events.keystore
+MYAPP_UPLOAD_KEY_ALIAS=tp-events-alias
+MYAPP_UPLOAD_STORE_PASSWORD=qwerty
+MYAPP_UPLOAD_KEY_PASSWORD=qwerty
